# shorturl-api

./: Cargo.toml  README.md  docker-compose.yaml  dockerfile
migrations/20260612000000_create_url_insert/: down.sql  up.sql
src/: Readme.md  main.rs
src/services/: mod.rs  models.rs  schema.rs
src/services/connection/: mod.rs
src/services/get_url/: mod.rs
src/services/insert_url/: mod.rs
