[package]
name = "url-shorter"
version = "0.1.0"
edition = "2024"

[dependencies]
diesel = { version = "2.3.10", features = ["postgres","chrono","r2d2"] }
openssl-sys = { version = "0.9.100", features = ["vendored"] }
input-rust = "1.0.0"
actix-web = "4.13.0"
dotenvy = "0.15.7"
nanoid = "0.4"
actix-web-ratelimit = { version = "0.1", features = ["redis"] }
time = "0.3.36"
redis = { version = "0.27", features = ["tokio-comp"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
diesel_migrations = "2.3.2"
